// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[component]: post-preview-card should with categories match snapshot 1`] = `
<DocumentFragment>
  <div
    class="max-w-xs w-[100%] h-[100%] bg-white shadow-md rounded-[4px] overflow-hidden cursor-pointer hover:-translate-y-1.5 transition-all ease-in"
  >
    <img
      alt="Lorem Ipsum"
      class="w-full h-48 object-cover"
      src=""
    />
    <div
      class="px-2 py-2"
    >
      <div
        class="flex flex-wrap gap-1 mb-2"
      >
        <span
          class="bg-pink-700 rounded-[4px] px-1 py-1 text-sm font-semibold text-white"
        >
          <p
            class="text-sm"
          >
            Books
          </p>
        </span>
        <span
          class="bg-pink-700 rounded-[4px] px-1 py-1 text-sm font-semibold text-white"
        >
          <p
            class="text-sm"
          >
            Music
          </p>
        </span>
        <span
          class="bg-pink-700 rounded-[4px] px-1 py-1 text-sm font-semibold text-white"
        >
          <p
            class="text-sm"
          >
            Toys
          </p>
        </span>
      </div>
      <div
        class="font-bold text-xl mb-2"
      >
        <h3
          class="text-lg"
        >
          Lorem Ipsum
        </h3>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[component]: post-preview-card should without categories match snapshot 1`] = `
<DocumentFragment>
  <div
    class="max-w-xs w-[100%] h-[100%] bg-white shadow-md rounded-[4px] overflow-hidden cursor-pointer hover:-translate-y-1.5 transition-all ease-in"
  >
    <img
      alt="Lorem Ipsum"
      class="w-full h-48 object-cover"
      src=""
    />
    <div
      class="px-2 py-2"
    >
      <div
        class="flex flex-wrap gap-1 mb-2"
      />
      <div
        class="font-bold text-xl mb-2"
      >
        <h3
          class="text-lg"
        >
          Lorem Ipsum
        </h3>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
